log

Thu 14 Mar 2024 01:03:56 AM UTC: 
 exercises.c | 64 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 60 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:80:15: error: ‘arr’ undeclared (first use in this function); did you mean ‘arr2’?
   80 |           if (arr[i] < arr[j])
      |               ^~~
      |               arr2
exercises.c:80:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c34c5f9
Thu 14 Mar 2024 01:04:20 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:82:34: error: ‘arr’ undeclared (first use in this function); did you mean ‘arr2’?
   82 |             result[nuevaTalla] = arr[i];
      |                                  ^~~
      |                                  arr2
exercises.c:82:34: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7ee6e30
Thu 14 Mar 2024 01:04:30 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3fdbb7f
Thu 14 Mar 2024 01:07:05 AM UTC: 
 exercises.c | 20 ++------------------
 1 file changed, 2 insertions(+), 18 deletions(-)
 tests:  0|5
total_score: 20/70
20231ff
